infrastructure/base/layer1/keycloak/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: keycloak
  namespace: keycloak-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`keycloak.cluster.arpa`)
      kind: Rule
      services:
        - name: keycloak
          port: http
  tls:
    secretName: traefik-tls
